feat: OCR setup
